--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-calendar": "^4.6.0",
+    "react-countup": "^6.5.3",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
